# codeit-tutorial

./: git命令使用说明.docx  基于codeit的机器人产品矩阵.pptx
1--跨系统编程示例/: 使用说明.docx
1--跨系统编程示例/cmake-3.12.2-win64-x64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
1--跨系统编程示例/cmake-3.12.2-win64-x64/doc/cmake/html/_static/: documentation_options.js
1--跨系统编程示例/cmake-3.12.2-win64-x64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  enable_language.html  enable_testing.html  endforeach.html  (+79 more)
1--跨系统编程示例/cmake-3.12.2-win64-x64/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CFLAGS.html  CSFLAGS.html  (+22 more)
1--跨系统编程示例/test/: CMakeLists.txt
1--跨系统编程示例/test/src/: main.cpp
2--调用codeit函数模块/1--矩阵库与旋量库函数/: 矩阵库与旋量库函数说明.docx
2--调用codeit函数模块/1--矩阵库与旋量库函数/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
2--调用codeit函数模块/10--创建Sensor/src/: main.cpp
2--调用codeit函数模块/11--保存与读取配置文件/: CMakeLists.txt
2--调用codeit函数模块/11--保存与读取配置文件/src/: main.cpp
2--调用codeit函数模块/2--基类Object使用说明/: CMakeLists.txt  Object使用说明.docx
2--调用codeit函数模块/2--基类Object使用说明/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
2--调用codeit函数模块/3--表达式计算/: 表达式计算说明.docx
2--调用codeit函数模块/3--表达式计算/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
2--调用codeit函数模块/4--创建机器人模型/: 常用机器人模型说明.docx
2--调用codeit函数模块/4--创建机器人模型/1--创建Scara模型/src/: basicsystem.hpp
2--调用codeit函数模块/4--创建机器人模型/2--动力学与控制/src/: basicsystem.cpp
2--调用codeit函数模块/4--创建机器人模型/src/: main.cpp
2--调用codeit函数模块/5--创建Controller/src/: basicsystem.cpp  basicsystem.hpp
2--调用codeit函数模块/5--创建机器人模型/1--创建Scara模型/: 模型创建说明.docx
2--调用codeit函数模块/5--创建机器人模型/1--创建Scara模型/src/: basicsystem.cpp
2--调用codeit函数模块/5--创建机器人模型/2--规划器/: 1--轨迹规划说明.docx  2--S规划临界条件说明.pptx  3--轨迹融合说明.docx  4--MoveLL状态机说明.pptx
2--调用codeit函数模块/5--创建机器人模型/2--规划器/src/: basicsystem.cpp  main.cpp
2--调用codeit函数模块/5--创建机器人模型/3--动力学与控制/: 动力学与控制.docx
2--调用codeit函数模块/6--创建NrtController/: NrtController说明.docx
2--调用codeit函数模块/6--创建NrtController/src/: basicsystem.cpp  basicsystem.hpp
2--调用codeit函数模块/7--创建Controller/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
2--调用codeit函数模块/7--创建Interface/: Interface说明.docx
2--调用codeit函数模块/7--创建Interface/src/: basicsystem.cpp  basicsystem.hpp
2--调用codeit函数模块/8--保存与读取配置文件/src/: basicsystem.hpp
2--调用codeit函数模块/8--创建NrtController/: NrtController说明.docx
2--调用codeit函数模块/8--创建NrtController/src/: basicsystem.cpp  main.cpp
2--调用codeit函数模块/9--创建Interface/src/: basicsystem.cpp  main.cpp
2--调用codeit函数模块/返回值与通信格式/: CMakeLists.txt  返回值与通信格式.docx
2--调用codeit函数模块/返回值与通信格式/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
3--调用codeit设计指令/: codeit使用说明.docx  codeit指令汇总.docx  codeit指令说明.docx
3--调用codeit设计指令/1--通过xml设计指令格式/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
3--调用codeit设计指令/1--通过xml设计指令格式/src/resource/: command.xml
3--调用codeit设计指令/2--设计实时指令内容/src/: basicsystem.cpp  basicsystem.hpp  xfunc.cpp
3--调用codeit设计指令/2--设计指令的内容/: CMakeLists.txt
3--调用codeit设计指令/2--设计指令的内容/src/: basicsystem.cpp  main.cpp  xfunc.cpp
3--调用codeit设计指令/3--设计非实时指令内容/src/: basicsystem.cpp  basicsystem.hpp  main.cpp  xfunc.cpp  xfunc.hpp
3--调用codeit设计指令/4--指令增加异常处理/src/: basicsystem.cpp  basicsystem.hpp  main.cpp  xfunc.hpp
3--调用codeit设计指令/4--设计collectNrt内容/src/: basicsystem.cpp  main.cpp  xfunc.cpp  xfunc.hpp
3--调用codeit设计指令/5--指令增加异常处理/: codeit异常信息说明.docx
3--调用codeit设计指令/5--指令增加异常处理/src/: basicsystem.hpp  xfunc.cpp
4--调用codeit建立控制系统/1--调用codeit建立走马灯系统/: CMakeLists.txt
4--调用codeit建立控制系统/1--调用codeit建立走马灯系统/src/: basicsystem.cpp  basicsystem.hpp  io.cpp
4--调用codeit建立控制系统/2--调用codeit建立单电机控制系统/src/: basicsystem.cpp  basicsystem.hpp  servo_sine.cpp  xfunc.cpp  xfunc.hpp
4--调用codeit建立控制系统/3--调用codeit建立单电机控制系统/: CMakeLists.txt
4--调用codeit建立控制系统/3--调用codeit建立单电机控制系统/src/: basicsystem.cpp  basicsystem.hpp
4--调用codeit建立控制系统/4--创建实时机器人控制系统/: CMakeLists.txt
4--调用codeit建立控制系统/4--创建实时机器人控制系统/src/: main.cpp
4--调用codeit建立控制系统/建立完整的控制系统/: CMakeLists.txt  UR5.ttt
4--调用codeit建立控制系统/建立完整的控制系统/src/: basicsystem.cpp  basicsystem.hpp  main.cpp
(+1280 files in other folders)
